Replace table scans with queries